--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
 	<body>
 		<div id="app">
 			<div id="gl"></div>
+			<div class="controls">
+				<div>
+					<div>Move</div>
+					<div class="key">W</div>
+					<div class="key">A</div>
+					<div class="key">S</div>
+					<div class="key">D</div>
+				</div>
+				<div>
+					<div>Run</div>
+					<div class="key">Shift</div>
+				</div>
+				<div>
+					<div>Jump</div>
+					<div class="key">Space</div>
+				</div>
+				<div>
+					<div>Kick</div>
+					<div class="key">Q</div>
+				</div>
+				<div>
+					<div>Punch</div>
+					<div class="key">E</div>
+				</div>
+			</div>
 		</div>
 		<script type="module" src="/src/main.js"></script>
 	</body>
